# space-python-client

./: LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/space_client/: __init__.py  space_client.py  space_client_factory.py
src/space_client/cache/: __init__.py  builtin_cache_provider.py  cache_entry.py  cache_provider.py  cache_provider_factory.py  redis_cache_provider.py
src/space_client/modules/: __init__.py  cache_module.py  contract_module.py  feature_module.py
src/space_client/types/: __init__.py  cache_options.py  models.py  space_connection_options.py  space_event.py
tests/: conftest.py  test_builtin_cache_provider.py  test_cache_module.py  test_contract_module.py  test_factory.py  test_feature_module.py  test_space_client.py
